--- a/mobilapp/style.css
+++ b/mobilapp/style.css
@@ -86,9 +86,14 @@ footer {
     }
 }
 /* Image Styling */
-img {
+img .billede {
     max-width: 100%;   /* Makes sure the image does not exceed the container width */
     height: auto;      /* Maintains the aspect ratio of the image */
     display: block;    /* Removes extra space below the image */
     margin: 10 ;    /* Centers the image horizontally */
+}
+
+.kort {
+    width: 100%;   /* Makes sure the image does not exceed the container width */
+    height: 1200px;
 }
